--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,57 @@
 cmake_minimum_required(VERSION 3.29.3)
+
+set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/rogue)
 project(rogue)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS true)
+set(CMAKE_CXX_STANDARD_REQUIRED true)
+
+#
+# common functions
+#
+
+function(target_enable_warnings target)
+    set(gcc_api "$<COMPILE_LANG_AND_ID:C,ARMClang,AppleClang,Clang,GNU,LCC>")
+    set(msvc_api "$<COMPILE_LANG_AND_ID:C,MSVC>")
+    target_compile_options(${target}
+        PRIVATE
+            "$<${gcc_api}:-Wall;-Werror>"
+            "$<${msvc_api}:-W3;-WX>"
+    )
+endfunction()
+
+function(target_install_executable target)
+    INSTALL(TARGETS ${target})
+    INSTALL(FILES $<TARGET_RUNTIME_DLLS:${target}> TYPE BIN)
+endfunction()
+
+#
+# backend
+#
 
 add_subdirectory(backend)
 
-add_executable(backend-test)
-target_sources(backend-test
-    PRIVATE
-        "./backend-test.c"
-)
-target_link_libraries(backend-test
-    PUBLIC
-        backend::backend
-)
+#
+# backend-test
+#
 
-if (WIN32)
-    add_custom_command(
-        TARGET backend-test
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy -t $<TARGET_FILE_DIR:backend-test> $<TARGET_RUNTIME_DLLS:backend-test>
-        COMMAND_EXPAND_LISTS
-    )
-endif()
+add_subdirectory(samples)
+
+#
+# c++ std module
+#
+
+# I was not able to get this working...
+# add_subdirectory(cxx_std)
+
+#
+# core
+#
+
+add_subdirectory(core)
+
+#
+# resources
+#
+
+install(DIRECTORY resources DESTINATION .)
