--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -1,24 +1,24 @@
 cmake_minimum_required(VERSION 3.29.3)
 project(backend)
 
-set(SDL_ATOMIC_ENABLED_BY_DEFAULT     false)
+set(SDL_ATOMIC_ENABLED_BY_DEFAULT     true)
 set(SDL_AUDIO_ENABLED_BY_DEFAULT      false)
 set(SDL_VIDEO_ENABLED_BY_DEFAULT      true)
 set(SDL_RENDER_ENABLED_BY_DEFAULT     true)
 set(SDL_EVENTS_ENABLED_BY_DEFAULT     true)
 set(SDL_JOYSTICK_ENABLED_BY_DEFAULT   false)
 set(SDL_HAPTIC_ENABLED_BY_DEFAULT     false)
-set(SDL_HIDAPI_ENABLED_BY_DEFAULT     false)
+set(SDL_HIDAPI_ENABLED_BY_DEFAULT     true)
 set(SDL_POWER_ENABLED_BY_DEFAULT      false)
 set(SDL_THREADS_ENABLED_BY_DEFAULT    true)
-set(SDL_TIMERS_ENABLED_BY_DEFAULT     false)
-set(SDL_FILE_ENABLED_BY_DEFAULT       false)
+set(SDL_TIMERS_ENABLED_BY_DEFAULT     true)
+set(SDL_FILE_ENABLED_BY_DEFAULT       true)
 set(SDL_LOADSO_ENABLED_BY_DEFAULT     true)
-set(SDL_CPUINFO_ENABLED_BY_DEFAULT    false)
+set(SDL_CPUINFO_ENABLED_BY_DEFAULT    true)
 set(SDL_FILESYSTEM_ENABLED_BY_DEFAULT true)
 set(SDL_SENSOR_ENABLED_BY_DEFAULT     false)
 set(SDL_LOCALE_ENABLED_BY_DEFAULT     false)
-set(SDL_MISC_ENABLED_BY_DEFAULT       false)
+set(SDL_MISC_ENABLED_BY_DEFAULT       true)
 add_subdirectory(SDL SYSTEM)
 
 add_subdirectory(stb_image)
