--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -35,17 +35,15 @@ add_executable(core::core ALIAS core)
 
 target_sources(core
     PRIVATE
+        generation/room-generation.cc
         ascii.cc
         core.cc
+        logging.cc
         math.cc
         services.cc
         world.cc
-        generation/room-generation.cc
 )
-target_compile_features(core
-    PUBLIC
-        cxx_std_23
-)
+target_enable_cxx23(core)
 target_enable_warnings(core)
 # target_compile_options(core PRIVATE /analyze /analyze:plugin EspXEngine.dll)
 target_link_libraries(core
@@ -54,3 +52,48 @@ target_link_libraries(core
         Microsoft.GSL::GSL
 )
 target_install_executable(core)
+
+#
+# cgreen
+#
+
+include(FetchContent)
+
+FetchContent_Declare(cgreen
+    GIT_REPOSITORY "git@github.com:cgreen-devs/cgreen.git"
+    GIT_TAG "1.6.3"
+    GIT_SHALLOW true
+    EXCLUDE_FROM_ALL
+)
+
+FetchContent_MakeAvailable(cgreen)
+
+target_include_directories(cgreen_shared
+    INTERFACE
+        ${CGREEN_PUBLIC_INCLUDE_DIRS}
+)
+
+target_enable_cxx23(cgreen_shared OLD_LINK_LIBRARIES_COMPAT)
+
+#
+# tests
+#
+
+add_executable(tests)
+add_executable(tests::tests ALIAS tests)
+
+target_sources(tests
+    PRIVATE
+        tests.cc
+)
+target_enable_cxx23(tests)
+target_enable_warnings(tests)
+target_link_libraries(tests
+    PRIVATE
+        Microsoft.GSL::GSL
+        cgreen_shared
+)
+if(UNIX)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb3")
+endif()
+target_install_executable(tests)
