--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -2,20 +2,6 @@ cmake_minimum_required(VERSION 3.29.3)
 project(core)
 
 #
-# GSL
-#
-
-include(FetchContent)
-
-FetchContent_Declare(GSL
-    GIT_REPOSITORY "git@github.com:microsoft/GSL.git"
-    GIT_TAG "v4.0.0"
-    GIT_SHALLOW true
-)
-
-FetchContent_MakeAvailable(GSL)
-
-#
 # core
 #
 
@@ -35,16 +21,20 @@ add_executable(core::core ALIAS core)
 
 target_sources(core
     PRIVATE
+        common/logging.cc
+        common/math.cc
+        common/services.cc
+        core/ascii.cc
+        core/core.cc
+        game/world.cc
         generation/room-generation.cc
-        ascii.cc
-        core.cc
-        logging.cc
-        math.cc
-        services.cc
-        world.cc
 )
 target_enable_cxx23(core)
 target_enable_warnings(core)
+target_include_directories(core
+    PRIVATE
+        .
+)
 # target_compile_options(core PRIVATE /analyze /analyze:plugin EspXEngine.dll)
 target_link_libraries(core
     PRIVATE
@@ -54,46 +44,69 @@ target_link_libraries(core
 target_install_executable(core)
 
 #
+# tests
+#
+
+add_executable(unit-tests)
+add_executable(core::unit-tests ALIAS unit-tests)
+target_sources(unit-tests
+    PRIVATE
+        tests/unit-tests.cc
+)
+target_enable_cxx23(unit-tests)
+target_enable_warnings(unit-tests)
+target_include_directories(unit-tests
+    PRIVATE
+        .
+)
+target_link_libraries(unit-tests
+    PRIVATE
+        Microsoft.GSL::GSL
+        test-platform::test-platform
+)
+target_install_executable(unit-tests)
+
+#
 # cgreen
 #
 
-include(FetchContent)
+# include(FetchContent)
 
-FetchContent_Declare(cgreen
-    GIT_REPOSITORY "git@github.com:cgreen-devs/cgreen.git"
-    GIT_TAG "1.6.3"
-    GIT_SHALLOW true
-    EXCLUDE_FROM_ALL
-)
+# FetchContent_Declare(cgreen
+#     GIT_REPOSITORY "git@github.com:cgreen-devs/cgreen.git"
+#     GIT_TAG "1.6.3"
+#     GIT_SHALLOW true
+#     EXCLUDE_FROM_ALL
+# )
 
-FetchContent_MakeAvailable(cgreen)
+# FetchContent_MakeAvailable(cgreen)
 
-target_include_directories(cgreen_shared
-    INTERFACE
-        ${CGREEN_PUBLIC_INCLUDE_DIRS}
-)
+# target_include_directories(cgreen_shared
+#     INTERFACE
+#         ${CGREEN_PUBLIC_INCLUDE_DIRS}
+# )
 
-target_enable_cxx23(cgreen_shared OLD_LINK_LIBRARIES_COMPAT)
+# target_enable_cxx23(cgreen_shared OLD_LINK_LIBRARIES_COMPAT)
 
 #
 # tests
 #
 
-add_executable(tests)
-add_executable(tests::tests ALIAS tests)
+# add_executable(tests)
+# add_executable(tests::tests ALIAS tests)
 
-target_sources(tests
-    PRIVATE
-        tests.cc
-)
-target_enable_cxx23(tests)
-target_enable_warnings(tests)
-target_link_libraries(tests
-    PRIVATE
-        Microsoft.GSL::GSL
-        cgreen_shared
-)
-if(UNIX)
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb3")
-endif()
-target_install_executable(tests)
+# target_sources(tests
+#     PRIVATE
+#         tests.cc
+# )
+# target_enable_cxx23(tests)
+# target_enable_warnings(tests)
+# target_link_libraries(tests
+#     PRIVATE
+#         Microsoft.GSL::GSL
+#         cgreen_shared
+# )
+# if(UNIX)
+#     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -ggdb3")
+# endif()
+# target_install_executable(tests)
